--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A lightweight Markdown-powered blog engine built with Node.js + TypeScript.",
   "main": "index.js",
   "scripts": {
-    "start": "deno run --allow-net --allow-read --allow-write mod.ts"
+    "start": "deno run --allow-net --allow-read --allow-write main.ts"
   },
   "repository": {
     "type": "git",
