--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "deno run --allow-net --allow-read --allow-write main.ts",
-    "test": "deno test --allow-read tests/**/*.test.ts"
+    "test": "deno test --allow-all  tests/**/*.test.ts",
+    "integration:test": "deno test --allow-all --trace-leaks tests/integration/integration.test.ts",
+    "coverage": "deno test --allow-all --coverage=coverage tests/**/*.test.ts && deno coverage ./coverage --lcov > coverage.lcov && genhtml coverage.lcov -o coverage/html"
   },
   "repository": {
     "type": "git",
